@@ -78,9 +78,9 @@ Module::Build -> new
 	},
 	requires =>
 	{
-		'Capture::Tiny'    => 0.10,
+		'Capture::Tiny'    => 0.27,
 		'Config'           => 0,
-		'Config::Tiny'     => 2.14,
+		'Config::Tiny'     => 2.20,
 		'Date::Simple'     => 3.03,
 		'File::Basename'   => 2.84,
 		'File::Copy'       => 2.21,
@@ -89,17 +89,17 @@ Module::Build -> new
 		'File::Temp'       => 0,
 		'Getopt::Long'     => 2.38,
 		'GraphViz2::Marpa' => 2.03,
+		'GraphViz2::Marpa::Renderer::Graphviz' => 2.03,
 		'Moo'              => 1.006001,
 		'open'             => 0,
 		'parent'           => 0.225,
-		'Path::Class'      => 0.23,
 		'Path::Tiny'       => 0.061,
 		'Pod::Usage'       => 1.36,
-		'Set::Tiny'        => 0.01,
+		'Set::Tiny'        => 0.02,
 		'Sort::Key'        => 1.33,
 		'strict'           => 0,
-		'Text::Xslate'     => 1.4001,
-		'Types::Standard'  => 1.000004,
+		'Text::Xslate'     => 3.3.3,
+		'Types::Standard'  => 1.000005,
 		'warnings'         => 0,
 	},
 ) -> create_build_script();
