@@ -80,9 +80,9 @@ my(%params) =
 	PL_FILES  => {},
 	PREREQ_PM =>
 	{
-		'Capture::Tiny'    => 0.10,
+		'Capture::Tiny'    => 0.27,
 		'Config'           => 0,
-		'Config::Tiny'     => 2.14,
+		'Config::Tiny'     => 2.20,
 		'Date::Simple'     => 3.03,
 		'File::Basename'   => 2.84,
 		'File::Copy'       => 2.21,
@@ -91,19 +91,19 @@ my(%params) =
 		'File::Temp'       => 0,
 		'Getopt::Long'     => 2.38,
 		'GraphViz2::Marpa' => 2.03,
+		'GraphViz2::Marpa::Renderer::Graphviz' => 2.03,
 		'Moo'              => 1.006001,
 		'open'             => 0,
 		'parent'           => 0.225,
-		'Path::Class'      => 0.23,
 		'Path::Tiny'       => 0.061,
 		'Pod::Usage'       => 1.36,
-		'Set::Tiny'        => 0.01,
+		'Set::Tiny'        => 0.02,
 		'Sort::Key'        => 1.33,
 		'strict'           => 0,
 		'Test::More'       => 0.98,
 #		'Test::Pod'        => 1.45, # Make it optional. See t/pod.t
-		'Text::Xslate'     => 1.4001,
-		'Types::Standard'  => 1.000004,
+		'Text::Xslate'     => 3.3.3,
+		'Types::Standard'  => 1.000005,
 		'warnings'         => 0,
 	},
 	VERSION_FROM => 'lib/GraphViz2/Marpa/PathUtils.pm',
